# project-netflix

./: .dockerignore  .env  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
client/: Dockerfile  client.py
client/e2e_tests/: Dockerfile  e2e_tests.py
src/: StateManager.cpp  StateManager.h  main.cpp
src/Request/: AddMovieRequest.cpp  AddMovieRequest.h  HelpRequest.cpp  HelpRequest.h  InvalidRequest.cpp  InvalidRequest.h  RecommandMovieRequest.cpp  RecommandMovieRequest.h  RecommendMovieRequest.cpp  Request.cpp  Request.h
src/Request_Directory/: Response.h
src/Request_Provider/: CliRequestProvider.cpp  CliRequestProvider.h  RequestProvider.h
src/Services/: MoviesService.cpp  MoviesService.h
src/app/: App.cpp  App.h  PermissionManager.cpp  PermissionManager.h  StateManager.cpp  StateManager.h
src/client_context/: ClientContext.cpp  ClientContext.h
src/database/: Database.h  FilesDatabase.cpp  FilesDatabase.h
src/database/files_database/: FilesDatabase.cpp  FilesDatabase.h
src/request/: AddMovieRequest.cpp  AddMovieRequest.h  HelpRequest.cpp  HelpRequest.h  InvalidRequest.cpp  InvalidRequest.h  RecommendMovieRequest.cpp  RecommendMovieRequest.h  Request.cpp  Request.h  Response.cpp  Response.h  all_requests.h
src/request/add_movie_request/: AddMovieRequest.cpp  AddMovieRequest.h
src/request/delete_movie_request/: DeleteMovieRequest.cpp  DeleteMovieRequest.h
src/request/delete_request/: DeleteRequest.cpp  DeleteRequest.h
src/request/get_movie_request/: GetMovieRequest.cpp  GetMovieRequest.h
src/request/get_request/: GetRequest.cpp  GetRequest.h
src/request/help_request/: HelpRequest.cpp  HelpRequest.h
src/request/invalid_request/: InvalidRequest.cpp  InvalidRequest.h
src/request/patch_request/: PatchRequest.cpp  PatchRequest.h
src/request/post_request/: PostRequest.cpp  PostRequest.h
src/request/recommend_movie_request/: RecommendMovieRequest.cpp  RecommendMovieRequest.h
src/request_executor/: RequestExecutor.h
src/request_executor/thr_pool_executor/: ThrPoolRequestExecutor.cpp  ThrPoolRequestExecutor.h
src/request_executor/thread_pool/: ThreadPool.cpp  ThreadPool.h
src/request_executor/threads_executor/: ThreadRequestExecutor.cpp  ThreadRequestExecutor.h
src/request_provider/: CliRequestProvider.cpp  CliRequestProvider.h  RequestProvider.h
src/request_provider/cli_provider/: CliRequestProvider.cpp  CliRequestProvider.h
src/request_provider/socket_provider/: SocketRequestProvider.cpp  SocketRequestProvider.h
src/response_sender/: ResponseSender.h
src/response_sender/socket_sender/: SocketResponseSender.cpp  SocketResponseSender.h
src/services/: MoviesService.cpp  MoviesService.h
src/utils/: Utils.cpp  Utils.h
tests/: CMakeLists.txt  files_db_tests.cpp  files_db_tests.h  general_tests.cpp  general_tests.h  my_tests.cpp  recommendation_algo_tests.cpp  recommendation_algo_tests.h  unit_tests.cpp
tests/utils/: TestUtils.cpp  TestUtils.h
